# churcuring

./: .gitignore  Cargo.toml  README.md
ad2fsm/: Cargo.toml  build.rs
ad2fsm/src/: main.rs  readme.md
ad2fsm/src/builder/: ast_kind.rs  builder.rs  lower.rs  mod.rs  parse_context.rs  parse_error.rs  parser.rs
ad2fsm/src/builder/csharp/: csharp_gen.rs  mod.rs  template.rs  test_csharp_gen.rs
ad2fsm/src/builder/test_data/: activity.puml  break-in-while.puml  goto-label.puml  goto-loop.puml  if-else.puml  if-elseif-else.puml  repeat-while.puml  simple.puml  stop.puml  while.puml
ad2fsm/src/ts_const/: md5  mod.rs  ts_field_id.rs  ts_field_name.rs  ts_kind_id.rs  ts_kind_name.rs  ts_seq_index.rs
ad2fsm/templates/csharp/: dispatcher.cs.j2  states.cs.j2  transition.cs.j2
common/src/: lib.rs
common/src/cfg/: cf_graph.rs  cfg_builder.rs  cfg_cond.rs  cfg_edge.rs  cfg_node_kind.rs  mod.rs
common/src/fsm/: fs_machine.rs  mod.rs  state_id.rs  transition.rs
scl2fsm/: Cargo.toml
scl2fsm/src/: main.rs
scl2fsm/src/ast/: assignment.rs  binary_op.rs  compare_op.rs  condition.rs  context_decl.rs  expr.rs  literal.rs  mod.rs  name.rs  next.rs  program.rs  quantifier.rs  state_decl.rs  stmt.rs  ty.rs  type_decl.rs  unary_op.rs  use_stmt.rs
scl2fsm/test_data/: assertion.scl  minimal.scl  multi_guard.scl  select_update.scl  transfer.scl  use_state.scl
tree-sitter-ad/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-ad/bindings/c/: tree-sitter-activity-diagram.pc.in
tree-sitter-ad/bindings/go/: binding.go  binding_test.go
tree-sitter-ad/bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
tree-sitter-ad/bindings/python/tests/: test_binding.py
tree-sitter-ad/bindings/python/tree_sitter_activity_diagram/: __init__.py  __init__.pyi  binding.c
tree-sitter-ad/bindings/rust/: build.rs  lib.rs
tree-sitter-ad/bindings/swift/TreeSitterActivityDiagram/: activity_diagram.h
tree-sitter-ad/bindings/swift/TreeSitterActivityDiagramTests/: TreeSitterActivityDiagramTests.swift
tree-sitter-ad/src/: grammar.json  node-types.json  parser.c
tree-sitter-scl/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-scl/bindings/c/: tree-sitter-scl.pc.in
tree-sitter-scl/bindings/go/: binding.go  binding_test.go
tree-sitter-scl/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter-scl/bindings/python/tests/: test_binding.py
tree-sitter-scl/bindings/python/tree_sitter_scl/: __init__.py  binding.c
tree-sitter-scl/bindings/rust/: build.rs  lib.rs
tree-sitter-scl/bindings/swift/TreeSitterScl/: scl.h
tree-sitter-scl/bindings/swift/TreeSitterSclTests/: TreeSitterSclTests.swift
tree-sitter-scl/src/: grammar.json  node-types.json  parser.c
