[package]
name = "tree-sitter-ad"
description = "Activity Diagram PlantUML"
version = "0.1.0"
authors = ["scuptio"]
license = "Apache License 2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "activity-diagram"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-activity_diagram"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
    "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
tree-sitter = { workspace = true }