[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-activity-diagram"
description = "Activity Diagram"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "activity-diagram"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
authors = [{ name = "scuptio" }]
requires-python = ">=3.10"
license.text = "Apache License 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-activity_diagram"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
