[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-scl"
description = "State Construction Language (SCL) is a database system language in which correctness is achieved by constructing only valid system states, rather than handling errors during execution."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "scl"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
authors = [{ name = "scuptio" }]
requires-python = ">=3.10"
license.text = "Apache"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-scl"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
